[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cybnodes"
version = "0.7.0"
description = "Surround any LLM with verifiable capability networks (exact math, knowledge, web) and say each result back in its own voice."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CybWu" }]
keywords = ["llm", "agent", "graphrag", "router", "tool-use", "rag", "framework"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://cybnodes.pages.dev"
Repository = "https://github.com/Alex-Lou/cybnodes"
Documentation = "https://github.com/Alex-Lou/cybnodes#readme"

[project.optional-dependencies]
math = ["sympy>=1.12"]
dev = ["pytest", "sympy>=1.12"]

[tool.setuptools.packages.find]
include = ["cybnodes*"]
